# helloworld_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  helloworld
src/: CMakeLists.txt  fredo.cpp  fredo.h  helloworld.cpp
